--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     </div>
     <div id="content" style="display:none;">
         <audio id="background-music" loop>
-            <source src="https://files.offshore.cat/0wwBzY4X.mp3" type="audio/mpeg">
+            <source src="https://cdn.xoa.me/uploads/38a96e68-7074-4575-afdb-d914e096932e.mp3" type="audio/mpeg">
         </audio>
         <video id="background-video" loop muted>
-            <source src="https://pomf2.lain.la/f/0xdnuns1.mp4" type="video/mp4">
+            <source src="https://cdn.xoa.me/uploads/81052737-5ed3-4ad7-b54c-5a1b2499f7be.mp4" type="video/mp4">
         </video>
         <div id="video-overlay"></div>
         <div id="bio-link">
             <div id="user-profile">
-                <img src="https://api.lanyard.rest/1059122727681802301.png">
+                <img src="https://cdn.xoa.me/uploads/b7b44a64-abc5-4052-9c81-09a3461dd8a9.gif">
                 <h2>mq</h2>
                 <p>14</p>
                 <div id="buttons">
-                    <a href="https://lookup.guru/1059122727681802301">discord</a>
-                    <a href="https://github.com/vqvv">github</a>
+                    <a href="https://cnd.discordapp.com/users/679923929720160274">discord</a>
+                    <a href="https://github.com/lightlvr">github</a>
                 </div>
                 </div>
             </div>
