--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     </div>
     <div id="enter-site">
-        <button id="enter-button">Click to enter</button>
+        <button id="enter-button">𓆩♡𓆪</button>
     </div>
     <div id="content" style="display:none;">
         <audio id="background-music" loop>
