--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mq</title>
+    <title>light</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
@@ -22,11 +22,11 @@
         <div id="bio-link">
             <div id="user-profile">
                 <img src="https://cdn.xoa.me/uploads/b7b44a64-abc5-4052-9c81-09a3461dd8a9.gif">
-                <h2>mq</h2>
-                <p>14</p>
+                <h2>light</h2>
+                <p>.gg/aeri | .gg/zibai | .gg/linnea | i love sanny</p>
                 <div id="buttons">
                     <a href="https://cnd.discordapp.com/users/679923929720160274">discord</a>
-                    <a href="https://github.com/lightlvr">github</a>
+                    <a href="https://instagram.com/sdea.tu">insta</a>
                 </div>
                 </div>
             </div>
